--- a/index.html
+++ b/index.html
@@ -2338,6 +2338,9 @@
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
           anchor.addEventListener('click', function (e) {
             e.preventDefault();
+            
+            document.getElementById('main-nav').classList.remove('is-active');
+            document.getElementById('menu-toggle').classList.remove('is-active');
 
             const offset = -90,
               element = document.querySelector(this.getAttribute('href')),
