Added new translated images

--- a/index.html
+++ b/index.html
@@ -931,10 +931,10 @@
                                   <p>Έψαχνα για μερικά άρθρα και κριτικές για την κρέμα <a href="#form_wrap">Flexio</a> και αναρωτιόμουν πόσοι άνθρωποι γνωρίζουν το προϊόν. Πάντα με ενδιαφέρουν τα ειλικρινή σχόλια από τους πιο έμπειρους ανθρώπους. Βρήκα αυτήν την κριτική σε μια δημοφιλή πηγή:</p>
                                   <p> </p>
                                   <div class="imgWrap article-image">
-                                    <a class="image-link d-block" href="images/pics/" data-lightbox="article-set" data-title>
+                                    <a class="image-link d-block" href="images/pics/screenshot.jpg" data-lightbox="article-set" data-title>
                                       <div class="aspect">
                                         <picture>
-                                          <img class=" img-fluid" src="images/pics/" alt="" loading="lazy">
+                                          <img class=" img-fluid" src="images/pics/screenshot.jpg" alt="" loading="lazy">
                                         </picture>
                                       </div>
                                     </a>
