Responsive styles for comments actions

--- a/index.html
+++ b/index.html
@@ -1195,6 +1195,17 @@
                                       color: #999999;
                                       padding: 0 4px;
                                     }
+                                    
+                                    @media (max-width: 460px) {
+                                      .comments-item__actions {
+                                        white-space: nowrap;
+                                        overflow-x: scroll;
+                                        padding-bottom: 8px;
+                                      }
+                                      .comments-actions__link {
+                                        font-size: 12px;
+                                      }
+                                    }
                                   </style>
                                   <div class="webt-comments">
                                     <span class="webt-comments__heading">Σχόλια</span>
