Updated post tag label

--- a/index.html
+++ b/index.html
@@ -1370,8 +1370,7 @@
                             title="Δείτε περισσότερα στην κατηγορία: Στυλ &amp; Ομορφιά" href="#form_wrap"> Στυλ
                             &amp; Ομορφιά </a>
                             <ul class="plain">
-                              <li><a href="#form_wrap" hreflang="el">AEGEAN AIRLINES</a></li>
-                              <li><a href="#form_wrap" hreflang="el">Zeus+Δione</a></li>
+                              <li><a href="#form_wrap" hreflang="el">ΚΑΙΝΟΤΟΜΙΕΣ</a></li>
                             </ul>
                           </div>
                           
