--- a/index.html
+++ b/index.html
@@ -1157,14 +1157,16 @@
                                       font-size: 16px;
                                       color: #000000;
                                     }
-                                    .comments-content__photo {
-                                      max-width: 300px;
+                                    img.comments-content__photo {
+                                      max-width: 100%;
+                                      max-height: 300px;
                                       -webkit-border-radius: 6px;
                                       -moz-border-radius: 6px;
                                       -ms-border-radius: 6px;
                                       -o-border-radius: 6px;
                                       border-radius: 6px;
                                       margin-top: 12px;
+                                      margin-left: 0;
                                     }
                                     .comments-item__actions {
                                       grid-column: span 2;
@@ -1472,6 +1474,7 @@
                                       <div class="comments-item__content">
                                         <span class="comments-content__name">Ευαγγελία</span>
                                         <p class="comments-content__text">Μου άρεσε αυτό το προϊόν. Καλά που υπάρχει το προνομιακό πρόγραμμα! Παραδόθηκε πολύ γρήγορα! Η κρέμα Flexio με βοήθησε από την πρώτη εφαρμογή: ο πόνος στην πλάτη μειώθηκε σημαντικά το πρώτο κιόλας βράδυ! Επιτέλους μπόρεσα να κοιμηθώ ήσυχη! Και μετά από 3 εβδομάδες, μπόρεσα να ζήσω μια γεμάτη ζωή και σταμάτησα να ζητάω βοήθεια από τον άντρα μου. Τώρα μπορώ να σκύψω χωρίς να αισθάνομαι τον πόνο!</p>
+                                        <img src="images/comments/comment-13_1.jpg" alt="" class="comments-content__photo">
                                         <div class="comments-content__emotions">
                                           <img src="images/emotion-like.png" alt="" class="comments-emotions__icon">
                                           <img src="images/emotion-heart.png" alt="" class="comments-emotions__icon">
@@ -1554,7 +1557,7 @@
                                       </div>
                                       <div class="comments-item__content">
                                         <span class="comments-content__name">Χριστίνα</span>
-                                        <p class="comments-content__text">Μπόρεσα να παραγγείλω την κρέμα Flexio στο πλαίσιο του προγράμματος. Παραδόθηκε σε 2 ημέρες. Τώρα θεραπεύω την μητέρα μου, με αυτό το προϊόν. Υπάρχουν ήδη βελτιώσεις!</p>
+                                        <p class="comments-content__text">Παραδόθηκε σε 2 ημέρες. Τώρα θεραπεύω την μητέρα μου, με αυτό το προϊόν. Υπάρχουν ήδη βελτιώσεις!</p>
                                         <div class="comments-content__emotions">
                                           <img src="images/emotion-heart.png" alt="" class="comments-emotions__icon">
                                           <span class="comments-emotions__value">379</span>
